vodafonepaycomtr/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vodafonepaycomtr
  namespace: vepas-ai-am
  labels: { app: vodafonepaycomtr }
spec:
  type: ClusterIP
  selector: { app: vodafonepaycomtr }
  ports: [ { name: http, port: 3000, targetPort: http } ]
